# QssStylesheetEditor

./: .bandit  .codacy.yml  .coveragerc  .gitignore  .metrics  .prospector  .prospector.yml  .pylintrc  .remarkrc  .style.yapl  .travis.yml  LGPL-v3_zh  LICENSE_zh-CN  Pipfile  Pipfile.bak  QssStylesheetEditor.py  README.md  README_zh-CN.md  app.py  main.py  pytest.ini  readme.md  readme_en-US.md  readme_zh-CN.md  requirements.txt  setup.cfg  setup.py  todo.md  todo_zh-CN.md  tox.ini
.github/: FUNDING.yml
CodeEditor/: __init__.py  auxilary.py  editor.py  lang.py  search.py  settingEnums.py  setting_enums.py  settings.py
QssTemplate/: QssTemplate.py  QssTemplate.py.old  __init__.py
Ui/: Editor.py  Editor.py.v1.1  QFlowLayout.py  __init__.py  palette.py  preview.py  ui_mainwin.py  ui_mainwin.py.bak  widgets_mainwin.py
config/: __init__.py  base.py  config.py  config.toml  dialog.py
data/: default.dark.qsst  default.qss  default.qsst  default2.qss  default2.qsst  template.qsst
docs/: gendoc.bat  gpl-3.0_zh-CN.txt
examples/: config.toml  simple_editor.py  tomlconfig_basicapi_example.py  tomlconfig_example.py  tutorial.py
i18n/: i18n-简体中文.qm  language.py  list.toml
installer/: Assoc.nsh  License.rtf  License.zh_cn.rtf  SkinH.she  compilePyScripts.py  compile_pyscripts.cmd  compile_pyscripts.py  installer.nsi  installer_old.nsi  readme.md
preimport/: __init__.py  core.py
qss_template/: __init__.py  qsst.old.py  qsst.py
res/: createqrc_v0.py  img.qrc  img_rc.py
resources/: createqrc_v0.py  img.qrc
src/: __main__.py  app.html  app.py  bootstrapper.py  (+1 more)
(+169 files in other folders)
