# setuptools config
[bdist_wheel]
universal = 1
# python-tag = py36
[metadata]
license_file = LICENSE

; pycodestyle yapf config
[pycodestyle]
exclude = .*, venv, build, dist, node_modules, *old.py, *_bak.py
# print total number of errors and warnings
count = True
# W503 line break before binary operator, W504 after
ignore = W503, W504
max-line-length = 120
statistics = True
# see config for pep8 in <https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration>
# generall usage: pycodestyle src --statistics -qq

[yapf]
based_on_style = pep8
indent_width = 4
column_limit = 120
# see cofig for yapf in <https://github.com/google/yapf#formatting-style>
# alse can get config file by `yapf --style-help > .style.yapf`
# generall usage: yapf -ri src
# YAPF exlude files: file named .yapfignore located in the working directory from which YAPF is invoked.